@@ -105,6 +105,11 @@ Tests
 - Issue #15615: Add some tests for the json module's handling of invalid
   input data.  Patch by Kushal Das.
 
+Build
+-----
+
+- Issue #15645: Ensure 2to3 grammar pickles are properly installed.
+
 
 What's New in Python 3.3.0 Beta 2?
 ==================================
